<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_page_background"
    tools:context=".Login">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout10"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_below="@+id/phoneAuth"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white"
            android:elevation="6dp"
            android:text="Send Code"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneAuth"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/resendButton2"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_below="@+id/phoneAuth"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white"
            android:elevation="6dp"
            android:text="Resend Code"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendButton"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:id="@+id/phoneAuth"
            android:layout_width="380dp"
            android:layout_height="86dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="Phone number:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:ccp_defaultNameCode="AU" />

                    <EditText
                        android:id="@+id/phoneText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter mobile number"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColorHighlight="@android:color/holo_blue_dark"
                        android:textColorLink="@android:color/holo_blue_dark" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen2"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="196dp"
        android:layout_height="49dp"
        android:text="Signed Out"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/verify"
            android:layout_width="102dp"
            android:layout_height="41dp"
            android:layout_centerHorizontal="true"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_white"
            android:elevation="6dp"
            android:text="Verify Code"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/codeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Enter verification code"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
